# zk-sok

./: .gitignore  .gitmodules  README.md
Spartan/: Cargo.toml
Spartan/examples/: cubic.rs  sha256.rs
arkworkslab/: Cargo.toml  Dockerfile  README.md
arkworkslab/src/: cubic_expression.rs  rangeproof.rs  sha256.rs
bulletproofs/: Cargo.toml  output.txt  rust-toolchain
bulletproofs/benches/: range_proof.rs
bulletproofs/src/: cubic_expression.rs  lib.rs  linear_proof.rs
dalek/: Cargo.toml  README.md
dalek/src/: rangeproof.rs
delak/: Cargo.toml  Dockerfile  README.md
delak/src/: rangeproof.rs
gitbook-docker/: README.md  docker-compose.yml
gitbook-docker/book/: README.md  SUMMARY.md  conclusion.md  constraint.md  gadgets.md  zkp.md
gitbook-docker/book/Spartan/: Spartan-1-en.md  Spartan-1.md  Spartan-2-en.md  Spartan-2.md  Spartan-circuit.md  Spartan-gadget.md  Spartan-gadgets.md  Spartan-zkp.md
gitbook-docker/book/_book/: chapter1.html  chapter2.html  conclusion.html  index.html  search_index.json
gitbook-docker/book/arkworks/: arkworks-1-en.md  arkworks-1.md  arkworks-2-en.md  arkworks-circuit.md  arkworks-gadget.md  arkworks-gadgets.md  arkworks-zkp.md
gitbook-docker/book/dalek/: dalek-1-en.md  dalek-1.md  dalek-2-en.md  dalek-2.md  dalek-circuit.md  dalek-zkp.md
gitbook-docker/book/gnark/: gnark-1-en.md  gnark-2-en.md  gnark-2.md  gnark-circuit.md  gnark-gadgets.md  gnark-zkp.md
gitbook-docker/book/halo2/: halo2-2.md  (+6 more)
gnark/: Dockerfile  README.md
gnark/testCubicequation_groth16/: go.mod
gnark/testCubicequation_plonk/: test.go
gnark/testCubquation_plonk/: go.mod
gnark/testrangeproofs/: go.mod
gnark/testrangeproofs_groth16/: test.go
gnark/testrangeproofs_plonk/: go.mod  test.go
gnark/testsha256/: test.go
gnark/testsha256_groth16/: test.go
gnark/testsha256_plonk/: .gitignore  go.mod  test.go
gnarklab/: Dockerfile
gnarklab/testCubitequation/: massif.out.2539326  report.txt  test.go
gnarklab/testrangeproofs/: massif.out.2542261  report.txt  test.go
gnarklab/testrangeproofs_plonk/: test.go
gnarklab/testsha256/: go.mod  test.go
gnarklab/testsha256_plonk/: test.go
halo2/: Cargo.toml  README.md
halo2/halo2_gadgets/: Cargo.toml
halo2/halo2_gadgets/benches/: sha256.rs
halo2/halo2_gadgets/src/sha256/: table16.rs
halo2/halo2_proofs/: Cargo.toml
halo2/halo2_proofs/examples/: cubic_expression.rs  range_proof.rs  rangeproof_sim.rs  sha256_example.rs
halo2/halo2_proofs/src/: dev.rs
halo2/src/: cubic_expression.rs  range_proof.rs  sha256.rs
libioplab/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
libioplab/src/: CMakeLists.txt  cubic_sim_Aurora.cpp  cubic_sim_Fractal.cpp  cubic_sim_Ligero.cpp  rangeproof_sim_Aurora.cpp  rangeproof_sim_Fractal.cpp  rangeproof_sim_Ligero.cpp  sha256_sim_Aurora.cpp  sha256_sim_Fractal.cpp  sha256_sim_Ligero.cpp
libsnark/: Dockerfile
libsnark-playground/src/: CMakeLists.txt
libsnark/src/: cubicexpression.cpp  rangeproof.cpp  sha256.cpp
libsnarklab/: .gitmodules  CMakeLists.txt  Dockerfile  README.md
libsnarklab/src/: CMakeLists.txt  cubicexpression.cpp  rangeproof.cpp  sha256.cpp
plonky2/: .gitignore  Cargo.toml  Dockerfile  README.md
plonky2-sha256/: Cargo.toml  Dockerfile  README.md
plonky2-sha256/src/: main.rs
plonky2/plonky2/: Cargo.toml
plonky2/plonky2/examples/: fibonacci.rs  range_check.rs  range_proof.rs
plonky2/src/: cubic_expresstion.rs  lib.rs  range_proof.rs  sha256.rs  split_base.rs
snarkjs/: Dockerfile  README.md
snarkjs/cubic_fflonk/: circuit.zkey  cubic_expression.r1cs.json  quick_start.sh  response_0003  start.sh  verification_key.json
snarkjs/cubic_plonk/: cubic_expression.circom  quick_start.sh  start.sh
snarkjs/rangeproof_fflonk/: quick_start.sh  start.sh
snarkjs/rangeproof_groth16/: quick_start.sh  start.sh
snarkjs/rangeproof_plonk/: quick_start.sh  range_proof.circom  start.sh
snarkjs/sha256_fflonk/: quick_start.sh  start.sh
snarkjs/sha256_groth/: sha256_example.circom
snarkjs/sha256_groth16/: quick_start.sh  start.sh
snarkjs/sha256_plonk/: quick_start.sh  sha256_example.circom  start.sh
snarklab/groth16/: Cargo.toml
snarklab/src/: cubic_expression.rs  main.rs  rangeproof.rs
spartan/: Cargo.toml  README.md
spartan/src/: cubic.rs  rangeproof.rs  sha256.rs
tutorials/: Sample programs using the gnark library.md  Sample programs using the libsnark library.md  Sample programs using the snarkjs library.md
tutorials/artworks/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  SHA256.md
tutorials/delak/: Range Proof.md  Readme.md
tutorials/gnark/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  Running.md  SHA256.md
tutorials/halo2/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  SHA256.md
tutorials/libiop/: A Cubic Expression.md  Range Proof.md  Readme.md  SHA256.md
tutorials/libsnark/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  Running.md  SHA256.md
tutorials/plonky2/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  SHA256.md
tutorials/snarkjs/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  Running.md  SHA256.md
tutorials/spartan/: A Cubic Expression.md  Hash Function.md  Range Proof.md  Readme.md  Running.md  SHA256.md
(+119 files in other folders)
