[package]
name = "arklab"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-crypto-primitives = { version = "0.5.0", features = ["crh", "r1cs"] }
ark-std = "0.5.0"
ark-relations = "0.5.1"
ark-groth16 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
sha2 = "0.10.7"
ark-r1cs-std = "0.5.0"
rand_chacha = "0.3"

[[bin]]
name = "rangeproof"
path = "src/rangeproof.rs"

[[bin]]
name = "cubic_expression"
path = "src/cubic_expression.rs"

[[bin]]
name = "sha256"
path = "src/sha256.rs"