[package]
name = "plonky2"
version = "0.1.0"
edition = "2021"

[dependencies]
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2"}
anyhow = "1.0.40"
log = "0.4.14"
sha2 = "0.10"
env_logger = "0.11.6"
itertools = "0.14.0"

[[bin]]
name = "range_proof"
path = "src/range_proof.rs"

[[bin]]
name = "cubic_expression" 
path = "src/cubic_expresstion.rs"

    